sd/backup/bemily-proxy-service-cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bemily-proxy
  labels:
    role: message
    service: bemily-proxy
spec:
  selector:
    role: message
    service: bemily-proxy
  ports:
    - name: bemily-proxy-rest
      port: 8080
      protocol: TCP
      targetPort: 8080
