sd/backup/bemily-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: bemily-proxy
    role: message
  name: bemily-proxy
spec:
  type: LoadBalancer
  selector:
    service: bemily-proxy
    role: message
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
